beta 1.0 release