@@ -1,1 +1,10 @@
 # DiscordBotGenerator
+
+## How To Use It
+
+1. Download the DiscordBotGenerator.jar
+2. open the terminal/CMD, and go into the folder where the jar was in
+3. type in `java -jar --enable-preview DiscordBotGenerator.jar`
+
+Enjoy your auto generated bot!
+> Be SURE to read the README file that's generated with the bot
